--- a/src/styles/components/countrycard.module.scss
+++ b/src/styles/components/countrycard.module.scss
@@ -19,12 +19,21 @@
 
 .flag {
   aspect-ratio: 3 / 2;
+  width: 100%;
+  max-height: 200px;
   font-size: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--border);
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
 }
+
 
 .content {
   padding: 1.5rem;
