--- a/src/styles/components/countrydetail.module.scss
+++ b/src/styles/components/countrydetail.module.scss
@@ -1,25 +1,42 @@
-.wrapper {
+.detail-wrapper {
   display: grid;
   gap: 2rem;
+  grid-template-columns: 1fr;
 
   @media (min-width: 1024px) {
     grid-template-columns: 1fr 1fr;
-    gap: 4rem;
+    align-items: center;
   }
 }
 
-.flagContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.flag-container {
+  width: 100%;
 }
 
 .flag {
-  font-size: 6rem;
-  background-color: var(--element);
-  border-radius: 0.5rem;
-  padding: 3rem;
+  aspect-ratio: 3 / 2;
+  width: 100%;
+  background-color: white;
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  .band {
+    flex: 1;
+  }
+
+  .black {
+    background-color: black;
+  }
+
+  .yellow {
+    background-color: gold;
+  }
+
+  .red {
+    background-color: crimson;
+  }
 }
 
 .info {
@@ -28,41 +45,116 @@
   gap: 2rem;
 }
 
-.title {
+.country-name {
   font-size: 2rem;
   font-weight: bold;
 }
 
-.columns {
+.info-columns {
   display: grid;
+  grid-template-columns: 1fr;
   gap: 2rem;
 
-  @media (min-width: 640px) {
+  @media (min-width: 768px) {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-.column p {
+.column div {
   margin-bottom: 0.5rem;
+
+  strong {
+    display: inline-block;
+    width: 140px;
+  }
 }
 
 .borders {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 1rem;
+
+  .border-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+
+  .badge {
+    padding: 0.25rem 1rem;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  }
 }
 
-.borderList {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
 
-.borderButton {
-  background-color: var(--element);
-  padding: 0.5rem 1rem;
-  border-radius: 6px;
-  font-size: 0.85rem;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
-  color: var(--text);
-}
+//.wrapper {
+//  display: grid;
+//  gap: 2rem;
+//
+//  @media (min-width: 1024px) {
+//    grid-template-columns: 1fr 1fr;
+//    gap: 4rem;
+//  }
+//}
+//
+//.flagContainer {
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//}
+//
+//.flag {
+//  font-size: 6rem;
+//  background-color: var(--element);
+//  border-radius: 0.5rem;
+//  padding: 3rem;
+//  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+//}
+//
+//.info {
+//  display: flex;
+//  flex-direction: column;
+//  gap: 2rem;
+//}
+//
+//.title {
+//  font-size: 2rem;
+//  font-weight: bold;
+//}
+//
+//.columns {
+//  display: grid;
+//  gap: 2rem;
+//
+//  @media (min-width: 640px) {
+//    grid-template-columns: 1fr 1fr;
+//  }
+//}
+//
+//.column p {
+//  margin-bottom: 0.5rem;
+//}
+//
+//.borders {
+//  display: flex;
+//  flex-direction: column;
+//  gap: 0.75rem;
+//}
+//
+//.borderList {
+//  display: flex;
+//  flex-wrap: wrap;
+//  gap: 0.5rem;
+//}
+//
+//.borderButton {
+//  background-color: var(--element);
+//  padding: 0.5rem 1rem;
+//  border-radius: 6px;
+//  font-size: 0.85rem;
+//  box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+//  color: var(--text);
+//}
