--- a/src/styles/components/searchandfilter.module.scss
+++ b/src/styles/components/searchandfilter.module.scss
@@ -1,8 +1,9 @@
 .wrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3.4rem;
 
   @media (min-width: 640px) {
     flex-direction: row;
@@ -12,13 +13,15 @@
 
 .searchContainer {
   position: relative;
-  max-width: 28rem;
-  width: 100%;
+  width: 32rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
   position: absolute;
-  left: 1rem;
+  left: 2rem;
   top: 50%;
   transform: translateY(-50%);
   font-size: 1rem;
@@ -27,9 +30,10 @@
 
 .input {
   width: 100%;
-  padding: 0.75rem 1rem 0.75rem 2.5rem;
+  padding: 1.25rem 5.0rem;
   border: none;
-  border-radius: 8px;
+  outline: none;
+  border-radius: 4px;
   background-color: var(--element);
   color: var(--text);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
@@ -37,18 +41,36 @@
   &::placeholder {
     color: var(--text-muted);
   }
+
+  &:hover {
+    box-shadow: 0 2px 6px #0000000d;
+  }
 }
 
-.select {
-  padding: 0.75rem 1rem;
-  border: none;
-  border-radius: 8px;
-  background-color: var(--element);
-  color: var(--text);
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
-  width: 100%;
+.selectWrapper {
+  position: relative;
+  display: inline-block;
 
-  @media (min-width: 640px) {
-    width: 12rem;
+  .select {
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+    width: 100%;
+    padding: 1.25rem 5rem 1.25rem 1.5rem;
+    background-color: var(--element);
+    color: var(--text);
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
   }
+
+  .arrow {
+    position: absolute;
+    right: 1.2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: var(--text);
+  }
+
 }
