--- a/src/styles/components/countrydetail.module.scss
+++ b/src/styles/components/countrydetail.module.scss
@@ -1,50 +1,70 @@
 .detailWrapper {
-  padding: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.backButton {
-  background-color: var(--element);
-  border: none;
-  padding: 0.5rem 2rem;
-  border-radius: 6px;
-  cursor: pointer;
-  box-shadow: 0 0 5px rgba(0,0,0,0.1);
-  margin-bottom: 3rem;
-  font-size: 1rem;
-}
-
-.content {
+  width: 100vw;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  gap: 3rem;
 
-  @media (min-width: 1024px) {
-    flex-direction: row;
-    align-items: center;
-  }
-}
-
-.flag {
-  width: 100%;
-  max-width: 560px;
-  aspect-ratio: 3 / 2;
-  img {
+  .contentButtonBack {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+
+    .backButton {
+      background-color: var(--element);
+      border: none;
+      padding: 0.5rem 2rem;
+      border-radius: 6px;
+      cursor: pointer;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      margin-bottom: 3rem;
+      font-size: 1rem;
+    }
+
   }
+
+  .content {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 3rem;
+
+    .flag {
+      width: 50%;
+      max-width: 560px;
+      aspect-ratio: 3 / 2;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+      }
+    }
+
+    .content-details {
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+
+      .infoCountry {
+        width: 100%;
+        display: flex;
+
+        .column {
+          width: 50%;
+        }
+
+      }
+
+    }
+  }
+
+
 }
 
-.info {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
 
 .name {
   font-size: 2rem;
@@ -53,43 +73,70 @@
 
 .columns {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   gap: 2rem;
 
-  @media (min-width: 768px) {
-    flex-direction: row;
-    gap: 4rem;
+  //@media (min-width: 768px) {
+  //  flex-direction: row;
+  //  gap: 4rem;
+  //}
+  //
+  //p {
+  //  margin: 0.3rem 0;
+  //}
+}
+
+//.column {
+//  flex: 1;
+//}
+
+//.borders {
+//  display: flex;
+//  flex-direction: column;
+//  gap: 1rem;
+//
+//  strong {
+//    font-weight: 600;
+//  }
+//}
+//
+//.badgeContainer {
+//  display: flex;
+//  flex-wrap: wrap;
+//  gap: 0.5rem;
+//}
+//
+//.badge {
+//  background-color: var(--element);
+//  padding: 0.4rem 1.2rem;
+//  border-radius: 4px;
+//  font-size: 0.9rem;
+//  box-shadow: 0 0 3px rgba(0, 0, 0, 0.05);
+//}
+
+@media (max-width: 640px) {
+
+  .detailWrapper {
+    padding: 3rem 4rem;
   }
 
-  p {
-    margin: 0.3rem 0;
+}
+
+@media (min-width: 1024px) {
+
+  .detailWrapper {
+    padding: 3rem;
   }
+
 }
 
-.column {
-  flex: 1;
-}
+@media (min-width: 1280px) {
 
-.borders {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  strong {
-    font-weight: 600;
+  .detailWrapper {
+    padding: 3rem 4rem;
   }
-}
 
-.badgeContainer {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
 
-.badge {
-  background-color: var(--element);
-  padding: 0.4rem 1.2rem;
-  border-radius: 4px;
-  font-size: 0.9rem;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.05);
 }
