--- a/src/styles/components/home.module.scss
+++ b/src/styles/components/home.module.scss
@@ -77,6 +77,19 @@
 
 }
 
+
+@media (min-width: 640px) {
+
+  .header {
+    padding: 1rem 4rem;
+  }
+
+  .main {
+    padding: 2rem 4rem;
+  }
+
+}
+
 @media (min-width: 1024px) {
 
   .header {
