--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,6 +21,7 @@ body {
   margin: 0;
   font-family: system-ui, sans-serif;
   background-color: var(--bg);
+  overflow-x: hidden;
   color: var(--text);
 }
 
